src/objects/Win_Brand_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Brand_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Brand External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Id__c</fullName>
        <label>Brand Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <label>Wings Brand Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Id__c</columns>
        <columns>Country_Id__c</columns>
        <columns>Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Brand Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wings Brand Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>